--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -28,13 +28,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
                 
     - name: Install dependencies
-      run: npm install
+      run: yarn
       
-    - name: Run the tests
-      run: npm test
+    # - name: Run the tests
+    #   run: yarn test
       
-    - name: Build
-      run: npm run build
+    # - name: Build
+    #   run: yarn build
       
     - name: Deploy
       uses: amondnet/vercel-action@v19
