--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -41,20 +41,20 @@ jobs:
     - name: Install dependencies
       run: yarn
     
-    - name: Run the tests
-      run: npm test
+    # - name: Run the tests
+    #   run: npm test
       
     - name: Build
       run: yarn build
       
     - name: Deploy
       run: |
-        git config --global user.name $user_name
-        git config --global user.email $user_email
-        git remote set-url origin https://${github_token}@github.com/${repository}
+        # git config --global user.name $user_name
+        # git config --global user.email $user_email
+        # git remote set-url origin https://${github_token}@github.com/${repository}
         yarn deploy
       env:
-        user_name: 'github-actions[bot]'
-        user_email: 'github-actions[bot]@users.noreply.github.com'
-        github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
-        repository: ${{ github.repository }}
+        # user_name: 'github-actions[bot]'
+        # user_email: 'github-actions[bot]@users.noreply.github.com'
+        # github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+        # repository: ${{ github.repository }}
