--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -37,8 +37,8 @@ jobs:
     - name: Install dependencies
       run: yarn
       
-    - name: Run the tests
-      run: yarn test
+    # - name: Run the tests
+    #   run: yarn test
       
     - name: Build
       run: yarn build
